# offlineTimeTable_Cpp

./: .clang-format  .clang-tidy  .gitignore  .replit  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE.MD  Makefile  ReadMe.md  maena  main.cpp  main.py  pyproject.toml  replit.md  replit.nix  run.sh  test_runner  timetable.csv  timetable.html  timetableGen
.github/workflows/: ci.yml
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  test_runner  timetableGen
build_cmake/test_runner_autogen/: deps  moc_predefs.h
build_cmake/timetableGen_autogen/: deps  mocs_compilation.cpp
build_cmake/timetableGen_autogen/3N7FN5E5SX/: moc_SubjectDialog.cpp  moc_SubjectDialog.cpp.d
build_cmake/timetableGen_autogen/6XHY6POGKJ/: moc_ClassDialog.cpp  moc_ClassDialog.cpp.d
build_cmake/timetableGen_autogen/DMHXEJ42XS/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build_cmake/timetableGen_autogen/KDFFYXMCPP/: moc_RibbonToolbar.cpp  moc_RibbonToolbar.cpp.d
build_cmake/timetableGen_autogen/OL4NCZULB5/: moc_DataSidebar.cpp  moc_DataSidebar.cpp.d
build_cmake/timetableGen_autogen/QCHROAVVAC/: moc_RoomDialog.cpp  moc_RoomDialog.cpp.d
build_cmake/timetableGen_autogen/T42TDTEGMM/: moc_TeacherDialog.cpp  moc_TeacherDialog.cpp.d
build_cmake/timetableGen_autogen/Y35E7JOGH3/: moc_TimetableViewWidget.cpp  moc_TimetableViewWidget.cpp.d
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: timetableGen.db
docs/: SYSTEM_REVIEW.md
gui/: MainWindow.cpp  MainWindow.h  main.cpp  style.qss
gui/benchmark/: BenchmarkWidget.cpp  BenchmarkWidget.h
gui/classes/: ClassDialog.cpp  ClassDialog.h  ClassWidget.cpp  ClassWidget.h
gui/constraints/: ConstraintRelaxationDialog.cpp  ConstraintRelaxationDialog.h  ConstraintWidget.cpp  ConstraintWidget.h
gui/dashboard/: DashboardWidget.cpp  DashboardWidget.h
gui/divisions/: DivisionWidget.cpp  DivisionWidget.h
gui/events/: FixedEventWidget.cpp  FixedEventWidget.h
gui/export/: ExportWidget.cpp  ExportWidget.h
gui/lessons/: LessonDialog.cpp  LessonDialog.h  LessonWidget.cpp  LessonWidget.h
gui/preferences/: PreferenceWidget.cpp  PreferenceWidget.h
gui/ribbon/: RibbonToolbar.cpp  RibbonToolbar.h
gui/rooms/: RoomDialog.cpp  RoomDialog.h  RoomWidget.cpp  RoomWidget.h
gui/roomtypes/: RoomTypeWidget.cpp  RoomTypeWidget.h
gui/sidebar/: DataSidebar.cpp  DataSidebar.h
gui/subjects/: SubjectDialog.cpp  SubjectDialog.h  SubjectWidget.cpp  SubjectWidget.h
gui/substitutions/: SubstitutionWidget.cpp  SubstitutionWidget.h
gui/teachers/: TeacherDialog.cpp  TeacherDialog.h  TeacherWidget.cpp  TeacherWidget.h
gui/timeslot/: TimeSlotWidget.cpp  TimeSlotWidget.h
gui/timetableview/: LessonCardItem.cpp  LessonCardItem.h  TimetableScene.cpp  TimetableScene.h  TimetableViewWidget.cpp  TimetableViewWidget.h
models/: ConstraintViolation.h  Day.h  Division.h  FixedEvent.h  Lesson.h  LessonUnit.h  Period.h  Room.h  RoomType.h  SchoolClass.h  Subject.h  SubjectRequirement.h  Substitution.h  Teacher.h  TeacherConstraint.h  TeacherPreference.h  TimeBlock.h
services/: AnalyticsService.cpp  AnalyticsService.h  BacktrackingSolver.cpp  BacktrackingSolver.h  Benchmark.cpp  Benchmark.h  ConflictChecker.cpp  ConflictChecker.h  ConstraintExplain.cpp  ConstraintExplain.h  ConstraintExplanationService.cpp  ConstraintExplanationService.h  DataManager.cpp  DataManager.h  DomainTracker.cpp  DomainTracker.h  ExportService.cpp  ExportService.h  FeasibilityChecker.cpp  FeasibilityChecker.h  GreedySolver.cpp  GreedySolver.h  PdfReportService.cpp  PdfReportService.h  ResourceTracker.cpp  ResourceTracker.h  SQLiteService.cpp  SQLiteService.h  SolverStrategy.h  TimelineGenerator.cpp  TimelineGenerator.h  TimetableEngine.cpp  TimetableEngine.h  TimetableEvaluator.cpp  TimetableEvaluator.h  UndoRedoStack.cpp  UndoRedoStack.h
tests/: test_api.py  test_exploration.py  test_preservation.py  test_runner.cpp  test_timetable_gen.py
timetable/: Timetable.cpp  Timetable.h
utils/: Menu.cpp  Menu.h  PathUtil.h
web/: app.py  pdf_generator.py  timetable_gen.py
web/static/css/: asc.css
web/static/js/: app.js
web/templates/: index.html
