[project]
name = "timetable-web"
version = "1.0.0"
description = "Web backend for the offline timetable generator (Flask API server)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
